@@ -111,8 +111,3 @@ if (WITH_STATIC_LIBRARIES)
 endif (WITH_STATIC_LIBRARIES)
 
 install(FILES mosquitto.h DESTINATION "${INCLUDEDIR}")
-
-if (UNIX AND NOT APPLE)
-	install(CODE "EXEC_PROGRAM(/sbin/ldconfig)")
-endif (UNIX AND NOT APPLE)
-
